--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">빙고 게임</string>
     <string name="curr_player_message">플레이어: %1$s</string>
+    <string name="new_game_message">새로운 게임</string>
+    <string name="winner_message">우승자: %1$s</string>
 </resources>
