--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TicTacToe</string>
     <string name="curr_player_message">Player: %1$s</string>
+    <string name="new_game_message">New Game</string>
+    <string name="winner_message">Winner: %1$s</string>
 </resources>
